# FPGA

./: .gitignore  README.md
Assembler/GenericAssembler/: GenericAssembler.sln
Assembler/Tiny16Assembler/: Tiny16Assembler.sln
CCompiler/CCompiler/: Compiler.cs  Parser.cs  Preprocessor.cs  ResourcePlanner.cs  SyntaxTree.cs
CCompiler/CCompilerTests/: CCompilerTests.csproj  CompilerTests.cs
CPU16LiteMicrocodeGenerator/CPU16LiteMicrocodeGenerator/: Program.cs
CPU16_8StageMicrocodeGenerator/: CPU16_8StageMicrocodeGenerator.sln
CPU16_8StageMicrocodeGenerator/CPU16_8StageMicrocodeGenerator/: Program.cs
Cpu16/: alu.v  alu.vh  build_verilator.sh  cpu16.v  cpu16.vh  idecoder.v  register_file.v  test.v
Cpu16/asm/: a.out  test.asm
Cpu16/old/: alu.v  cpu16.v
Cpu16/test/: build_icarus.sh  build_verilator.sh  microcode.mem
Cpu16Assembler/: Cpu16Assembler.sln
Cpu16Assembler/Cpu16Assembler/: Compiler.cs  Parser.cs
Cpu16Emulator/: Cpu16Emulator.sln  config.json  config_lcd12864.json  config_vf_meter.json  i2cConfig.json  i2cConfig_vf_meter.json
Cpu16Emulator/Cpu16Emulator/: App.axaml.cs  CPU16View.axaml.cs  CPUView.axaml  CPUView.axaml.cs  CodeControl.cs  Cpu.cs  Cpu16.cs  Cpu16Emulator.csproj  Cpu16Lite.cs  ForthCPU.cs  ForthCPUView.axaml  ForthCPUView.axaml.cs  ICpuView.cs  MainWindow.axaml  MainWindow.axaml.cs  Tiny16v4.cs  Tiny16v4View.axaml  Tiny16v4View.axaml.cs
Cpu16Emulator/Cpu16EmulatorCommon/: Configuration.cs  Cpu16EmulatorCommon.csproj  IIODevice.cs  KS0108.cs  LCD1.cs
Cpu16Emulator/Cpu16EmulatorConsole/: ConsoleLogger.cs  Cpu16EmulatorConsole.csproj  Program.cs
Cpu16Emulator/Cpu16EmulatorCpus/: Cpu.cs  Cpu16Lite.cs  ForthCPU.cs
Cpu16Emulator/IODeviceBaseMemory/: IODeviceBaseMemory.cs
Cpu16Emulator/IODeviceFrequencyCounter/: IODeviceFrequencyCounter.cs
Cpu16Emulator/IODeviceI2CSlave/: IODeviceI2CSlave.cs  MCP3425.cs  MCP4725.cs
Cpu16Emulator/IODeviceLCD1/: IODeviceLCD1.cs  KS0108.cs
Cpu16Emulator/IODeviceLcdHD44780/: IODeviceLcdHD44780.csproj  LcdHD44780.cs
Cpu16Emulator/IODeviceMemory/: IODeviceMemory.cs  IODeviceMemory.csproj
Cpu16Emulator/IODeviceTimer/: IODeviceTimer.cs
Cpu16Lite/: alu.v  alu.vh  cpu16.8stage.v  cpu16.v  cpu16.v1.v
Cpu16Lite/8stage/: cpu16.8stage.v  test.8stage.v
Cpu16Lite/test/: build_icarus.sh  build_verilator.sh  microcode.mem
Cpu16Lite/v1/: cpu16.v1.v  test.v1.v
Cpu16Lite/vf_meter/: nano_1k.cst
Cpu16MicrocodeGenerator/: Cpu16MicrocodeGenerator.sln
Cpu16MicrocodeGenerator/Cpu16MicrocodeGenerator/: Program.cs
CpuTests/CpuTests/: Program.cs
DeviceHandler/: device_handler.v  led_handler.v  main.v  main_tb.v
DeviceHandler/EK-10CL025U256/: meter.qpf  meter.qsf
DeviceHandler/test/: build_iverilog.sh  build_verilator.sh
DumpToHex/: DumpToHex.sln
DumpToHex/DumpToHex/: Program.cs
EP2C5MiniBoard/EP2C5Test/: EP2C5Test.qpf  EP2C5Test.qsf  EP2C5Test.v
ForthCPU/: forth_cpu.v  forth_cpu.vh
ForthCPU/lib/: div3216.f  i2c_master.f  lib.f  ssd1306.f
ForthCPU/test/: build_verilator.sh  build_verilator_blink_hard_delay.sh  main.v  main.vh  main_blink.v  main_blink.vh  main_blink_hard_delay.v  main_blink_hard_delay.vh  main_blink_hard_delay_tb.v  main_tb.v
ForthCPU/tests/: build_16.sh  build_32.sh  build_verilator_16.sh  build_verilator_32.sh  config.json  emulator_config.json  main.v  main_tb.v  testsConfig_16.json  testsConfig_32.json  testsConfig_emulator.json
FrequencyCounterMAX7219/: test.v
JavaCPU/: java_cpu.v
JavaCPU/blink/: build_verilator.sh  main.v  main_tb.v  run_verilator.sh
JavaCPU/tests/: build.sh  (+7 more)
LcdFontConverter/: LcdFontConverter.sln
LcdTest/: LcdTest.sln
LedPmodTest/: main.v  test.v
LogicProbe/: main.v  main1.v  test.v  test1.v
Parallel_8bit/: main.v
PicoRV32/: cpu.h  start.S
PicoRV32/sdram_test/firmware/: CMakeLists.txt  tohex.sh
PicoRV32/sdram_test/firmware/src/: board.h  hal.c  main.c
SZForth/: SZForth.sln
Software/: README.md  tohex.sh
Software/LcdFontConverter.C/: CMakeLists.txt  main.c
Tiny16/: alu.v  alu.vh  test.v  tiny16.v  tiny16.vh
Tiny32/: README.md  decoder.mem  test.v  test_rv32i_tests.v  tiny32.v  tiny32.vh
Tiny32/v6/logic_probe/firmware/: CMakeLists.txt  tohex.sh
Tiny32/v6/logic_probe/firmware/src/: board.h  display.c  display.h  display.s  font16.c  font16.h  hal.c  main.S  main.c  ui.h  ui_240x135.c  ui_common.c
Tiny86/: tiny86.v
VexRiscv/: GenFullNoMmuNoCacheNoDebug.scala  VexRiscv.v
VexRiscv/meter/firmware/: CMakeLists.txt  ldscript.ld  main.c  start.S
VexRiscv/meter/firmware/src/: board.h  devices.c  hal.c  keyboard.c  main.c  start.S  ui.c
VexRiscv/meter/firmware/src/devices/: dev_keyboard.h  dev_si5351.h
common/: MAX7219.v  dds.v  dds_tb.v  decade_counter.v  decoder.v  div.v  div.v2.v  div_tb.v  fifo.v  frequency_counter.v  frequency_counter_tb.v  hyperram_controller.v  hyperram_emulator.v  i2c.v  i2c_master.v  i2c_slave.v  logic_probe.v  logic_probe16.v  logic_probe32.v  logic_probe_led.v  logic_probe_tb.v  pwm.v  pwm2.v  pwm2_tb.v  pwm_tb.v  qspi_rom_controller.v  qspi_rom_controller.vh  qspi_rom_emulator.v  register_file.v  sdram_controller.v  sdram_controller_16_to_32.v  sdram_emulator.sv  sevenSegmentCommonAnode.v  sevenSegmentCommonCathode.v  sevenSegmentTest.v  spi_lcd_tb.v  spi_ram_controller.v  time_counter.v  timer.v  uart1.v  (+7 more)
gcc-backend/: configure.ac
multidevice/: README.md  main.v  main2.v  main2_tb.v  main_tb.v
(+1094 files in other folders)
